force-app/main/default/objects/Inv_Adjustment__c/Inv_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Inv. Adjustment</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Inv. Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inv. Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>