force-app/main/default/objects/Inv_Adjustment__c/fields/Adjustment_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Total_Cost__c</fullName>
    <formula>(Unit_Cost__c *  IF(OR(Deficit_Count__c &gt; 0,  WH1_Deficit__c &gt; 0), - Deficit_Count__c - WH1_Deficit__c, 0)) + 
(Unit_Cost__c  * IF ( Overage_Count__c &gt; 0, Overage_Count__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Total Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>