force-app/main/default/objects/Inv_Adjustment__c/fields/AUX_FINISH_Actual__c.field-meta.xml
<CustomField>
    <fullName>AUX_FINISH_Actual__c</fullName>
    <label>AUX_FINISH_Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>