force-app/main/default/objects/Inv_Adjustment__c/fields/Deficit_Count__c.field-meta.xml
<CustomField>
    <fullName>Deficit_Count__c</fullName>
    <label>Deficit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>