force-app/main/default/objects/Inv_Adjustment__c/fields/Holding_IQA__c.field-meta.xml
<CustomField>
    <fullName>Holding_IQA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding IQA</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Inv. Adjustments</relationshipLabel>
    <relationshipName>Inv_Adjustments_Holding</relationshipName>
    <type>Lookup</type>
</CustomField>