force-app/main/default/objects/Inv_Adjustment__c/fields/Inventory_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Cost</label>
    <referenceTo>AcctSeed__Inventory_Cost__c</referenceTo>
    <relationshipLabel>Inv. Adjustments</relationshipLabel>
    <relationshipName>Inv_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>