force-app/main/default/objects/Inv_Adjustment__c/fields/Live_IQA__c.field-meta.xml
<CustomField>
    <fullName>Live_IQA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Real location to be used for inbound inventory movements</description>
    <label>Live IQA</label>
    <referenceTo>AcctSeedERP__Inventory_Balance__c</referenceTo>
    <relationshipLabel>Inv. Adjustments (Live IQA)</relationshipLabel>
    <relationshipName>Inv_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>