force-app/main/default/objects/Inv_Adjustment__c/fields/Overage_Count__c.field-meta.xml
<CustomField>
    <fullName>Overage_Count__c</fullName>
    <formula>Holding_IQA__r.AcctSeedERP__Available_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>