force-app/main/default/objects/Inv_Adjustment__c/fields/product2_id__c.field-meta.xml
<CustomField>
    <fullName>product2_id__c</fullName>
    <externalId>true</externalId>
    <label>product2_id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>