force-app/main/default/objects/Inv_Adjustment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inv. Adjustments</relationshipLabel>
    <relationshipName>Inv_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>