force-app/main/default/objects/Inv_Adjustment__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Inv. Adjustments</relationshipLabel>
    <relationshipName>Inv_Adjustments</relationshipName>
    <type>Lookup</type>
</CustomField>