force-app/main/default/objects/Inv_Adjustment__c/fields/QC_RACK_Actual__c.field-meta.xml
<CustomField>
    <fullName>QC_RACK_Actual__c</fullName>
    <label>QC_RACK_Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>