force-app/main/default/objects/Inv_Adjustment__c/fields/Unfinished_Aux_IQA__c.field-meta.xml
<CustomField>
    <fullName>Unfinished_Aux_IQA__c</fullName>
    <formula>Product__r.AUX_Unfinished__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unfinished_Aux_IQA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>