force-app/main/default/objects/Inv_Adjustment__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <formula>Inventory_Cost__r.AcctSeed__Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>