force-app/main/default/objects/Inv_Adjustment__c/fields/WH1_Deficit__c.field-meta.xml
<CustomField>
    <fullName>WH1_Deficit__c</fullName>
    <label>WH1 Deficit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>