force-app/main/default/objects/Inv_Adjustment__c/fields/WH1_IQA__c.field-meta.xml
<CustomField>
    <fullName>WH1_IQA__c</fullName>
    <formula>Product__r.Warehouse_1_Finished_Goods__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WH1_IQA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>