force-app/main/default/objects/Inv_Adjustment__c/listViews/Kiley_Search.listView-meta.xml
<ListView>
    <fullName>Kiley_Search</fullName>
    <columns>Sort_Order__c</columns>
    <columns>Product__c</columns>
    <columns>WH1_Actual__c</columns>
    <columns>WH1_IQA__c</columns>
    <columns>AUX_UNFINISH_Actual__c</columns>
    <columns>Unfinished_Aux_IQA__c</columns>
    <columns>AUX_FINISH_Actual__c</columns>
    <columns>Finished_Aux_IQA__c</columns>
    <columns>Overage_Count__c</columns>
    <columns>QC_RACK_Actual__c</columns>
    <columns>WH1_Deficit__c</columns>
    <columns>Deficit_Count__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>2025.01.31</value>
    </filters>
    <filters>
        <field>Sort_Order__c</field>
        <operation>notEqual</operation>
        <value>,0</value>
    </filters>
    <label>Kiley - Search</label>
</ListView>